--- a/UI/solutions-ui/angular.json
+++ b/UI/solutions-ui/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "solutions-ui"
+    }
+  },
+  "defaultProject": "solutions-ui",
+  "cli": {
+    "analytics": "4666d026-9b6d-417d-a865-5f25c33dbddc"
+  }
 }
